[gd_scene load_steps=17 format=3 uid="uid://djbq07of12xcf"]

[ext_resource type="Script" uid="uid://b03jy2wapcq6n" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://c74hsm5jt8l2g" path="res://Scenes/player.tscn" id="2_jjvhh"]
[ext_resource type="Theme" uid="uid://mox4kxu33gqu" path="res://assets/Themes/main_theme.tres" id="3_21xkr"]
[ext_resource type="PackedScene" uid="uid://d22xl4bgy7x7t" path="res://Scenes/mining_menu.tscn" id="3_kry3j"]
[ext_resource type="PackedScene" uid="uid://cooijbbw0y4w3" path="res://Scenes/lumbering_menu.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://c76reuo1bxrn5" path="res://Scenes/resource_menu.tscn" id="5_21xkr"]
[ext_resource type="PackedScene" uid="uid://ckyntiq4t3s4l" path="res://Scenes/guild_menu.tscn" id="5_wsu2k"]
[ext_resource type="PackedScene" uid="uid://4mkudobfj4kg" path="res://Scenes/character_menu.tscn" id="6_344ge"]
[ext_resource type="Theme" uid="uid://bxgqt7bk4a0aj" path="res://assets/Themes/menus_themes.tres" id="6_d1ilt"]
[ext_resource type="Texture2D" uid="uid://dl4i0s68y70yb" path="res://assets/Button.png" id="7_6bp64"]
[ext_resource type="Script" uid="uid://c5yjes8ahe8h6" path="res://Scripts/battle_menu.gd" id="7_6iyac"]
[ext_resource type="Texture2D" uid="uid://vl5inqomk64v" path="res://assets/Batlle_background.png" id="8_fdnlq"]
[ext_resource type="Texture2D" uid="uid://cld2p3w4umgpn" path="res://assets/Fight_background.png" id="10_fdnlq"]
[ext_resource type="PackedScene" uid="uid://cnpfwfyhpb1s8" path="res://Scenes/enemy.tscn" id="12_jkdf5"]
[ext_resource type="Texture2D" uid="uid://cwvu2h3c238r0" path="res://assets/Victory_board.png" id="13_jkdf5"]
[ext_resource type="Texture2D" uid="uid://646grmkl6jhs" path="res://assets/Back_button_white.png" id="16_k12tt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8gbba")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Mining Menu" parent="CanvasLayer" instance=ExtResource("3_kry3j")]
unique_name_in_owner = true
visible = false

[node name="Lumbering Menu" parent="CanvasLayer" instance=ExtResource("4_jjvhh")]
unique_name_in_owner = true
visible = false

[node name="Resource Menu" parent="CanvasLayer" instance=ExtResource("5_21xkr")]
unique_name_in_owner = true
visible = false

[node name="Guild Menu" parent="CanvasLayer" node_paths=PackedStringArray("player", "character_menu") instance=ExtResource("5_wsu2k")]
unique_name_in_owner = true
player = NodePath("../Battle Menu/Player")
character_menu = NodePath("../CharacterMenu")

[node name="CharacterMenu" parent="CanvasLayer" instance=ExtResource("6_344ge")]
unique_name_in_owner = true
visible = false

[node name="Battle Menu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_d1ilt")
script = ExtResource("7_6iyac")

[node name="explore_background" type="TextureRect" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_fdnlq")
expand_mode = 1

[node name="fight_button" type="TextureButton" parent="CanvasLayer/Battle Menu/explore_background"]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -40.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Battle Menu/explore_background/fight_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Fight"

[node name="battle_forest_bg" type="TextureRect" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_fdnlq")
expand_mode = 1

[node name="Player" parent="CanvasLayer/Battle Menu" instance=ExtResource("2_jjvhh")]
unique_name_in_owner = true
position = Vector2(-78, 53)

[node name="Enemy" parent="CanvasLayer/Battle Menu" instance=ExtResource("12_jkdf5")]
unique_name_in_owner = true
position = Vector2(926, 437)

[node name="black_fade" type="ColorRect" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="winloseboard" type="TextureRect" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 64.0
offset_right = 250.0
offset_bottom = 264.0
grow_horizontal = 2
texture = ExtResource("13_jkdf5")
expand_mode = 1
stretch_mode = 5

[node name="Retreat" type="TextureButton" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 0
offset_left = 410.0
offset_top = 273.0
offset_right = 560.0
offset_bottom = 333.0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Battle Menu/Retreat"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Retreat"

[node name="Forward" type="TextureButton" parent="CanvasLayer/Battle Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 0
offset_left = 593.0
offset_top = 273.0
offset_right = 743.0
offset_bottom = 333.0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Battle Menu/Forward"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Forward"

[node name="Buttons" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_21xkr")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = 10.0
offset_right = 540.0
offset_bottom = 66.0
grow_horizontal = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Character" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Character"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.5
offset_right = 20.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Character"

[node name="Resources" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Resources"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.5
offset_right = 20.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Resources"

[node name="Guild" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Guild"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.5
offset_right = 20.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Guild"

[node name="Mine" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Mine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -12.0
offset_right = 21.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Mine"

[node name="Lumber" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Lumber"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.5
offset_right = 20.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Forest"

[node name="Explore" type="TextureButton" parent="CanvasLayer/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("7_6bp64")
texture_pressed = ExtResource("7_6bp64")
texture_hover = ExtResource("7_6bp64")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Buttons/HBoxContainer/Explore"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.5
offset_right = 20.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0, 0, 1)
text = "Explore"

[node name="Back" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
offset_top = 101.0
offset_right = 150.0
offset_bottom = 151.0
texture_normal = ExtResource("16_k12tt")
texture_pressed = ExtResource("16_k12tt")
texture_hover = ExtResource("16_k12tt")
ignore_texture_size = true
stretch_mode = 0
